# freeteuse

./: .gitignore  README.md  build.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/release/: app-release.apk
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Key.cpp  Key.hpp  Log.hpp  Message.cpp  Message.hpp  Pipe.cpp  Pipe.hpp  Rcu.cpp  Rcu.hpp  Status.cpp  Status.hpp  freeteuse.cpp
app/src/main/cpp/prebuilts/include/event2/: event-config.h
app/src/main/cpp/prebuilts/include/foils/: rudp_hid_client.h
app/src/main/java/bzh/leroux/yannick/freeteuse/: CheatCode.java  DnsServiceSniffer.java  Freebox.java  FreeboxSniffer.java  Freeteuse.java  Home.java  Logger.java  MainActivity.java  MultiClicker.java  Painter.java  ScreenFitter.java  Simulator.java  Wifi.java
app/src/main/java/bzh/leroux/yannick/freeteuse/sniffers/: BonjourSniffer.java  DnsServiceSniffer.java  FreeboxSniffer.java  Simulator.java
app/src/main/res/drawable/: av_p.xml  b0_p.xml  b1_p.xml  b2_p.xml  b3_p.xml  b4_p.xml  b5_p.xml  b6_p.xml  b7_p.xml  b8_p.xml  b9_p.xml  back_p.xml  deezer_p.xml  down_p.xml  forward_p.xml  freeblue_p.xml  freegreen_p.xml  freered_p.xml  freeyellow_p.xml  info_p.xml  keyboard_p.xml  left_p.xml  menu_p.xml  minus_p.xml  music_p.xml  mute_p.xml  nextblue_p.xml  nextgreen_p.xml  nextred_p.xml  nextyellow_p.xml  ok_p.xml  pip_p.xml  play_pause_p.xml  plus_p.xml  power_p.xml  previousblue_p.xml  previousgreen_p.xml  previousred_p.xml  previousyellow_p.xml  radio_p.xml  (+57 more)
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
artwork/: av.xcf  b0.xcf  b1.xcf  b2.xcf  b3.xcf  b4.xcf  b5.xcf  b6.xcf  b7.xcf  b8.xcf  b9.xcf  back.xcf  down.xcf  drawable  focus.xcf  forward.xcf  free.xcf  info.xcf  keyboard.xcf  left.xcf  menu.xcf  minus.xcf  music.xcf  mute.xcf  next.xcf  ok.xcf  pip.xcf  play_pause.xcf  play_store.xcf  play_store1.xcf  play_store2.xcf  plus.xcf  power.xcf  previous.xcf  radio.xcf  record.xcf  revert.xcf  rewind.xcf  right.xcf  search.xcf  (+3 more)
artwork/play_store/: icon.xcf  play_store1.xcf  play_store3.xcf
gradle/wrapper/: gradle-wrapper.properties
